--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ url: ''
 author: your_full_name                  # change to your full name
 
 github:
-  username: github_username             # change to your github username
+  username: tiwarisarthak             # change to your github username
 
 twitter:
   username: twitter_username            # change to your twitter username
@@ -44,7 +44,7 @@ google_site_verification: google_meta_tag_verification # change to your verifica
 
 # Only if your site type is GitHub Project sites and doesn't have a custom domain,
 # change below value to '/projectname'.
-baseurl: ''
+baseurl: '/personalblog'
 
 # Change to your timezone › http://www.timezoneconverter.com/cgi-bin/findzone/findzone
 timezone: Asia/Shanghai
