--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ theme_mode:   # [light|dark]
 img_cdn: ''
 
 # the avatar on sidebar, support local or CORS resources
-avatar: /assets/img/favicons
+avatar: /assets/img/favicons/ms-icon-310x310.png
 
 # boolean type, the global switch for ToC in posts.
 toc: true
